--- a/dillydally-frontend/src/styles/Timer.css
+++ b/dillydally-frontend/src/styles/Timer.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   align-items: center;
   gap: 2rem;
-  margin: 3rem 0;
+  margin: 0;
+  padding: 0;
 }
 
 .timer-circle-wrapper {
